add some comments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 3.29)
 project(planning)
 set(CMAKE_CXX_STANDARD 17)
 
+# exe和dll的输出位置
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 
+# 动态库
 aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LISTS)
 add_library(common
 SHARED
@@ -15,6 +17,7 @@ PUBLIC
 ${PROJECT_SOURCE_DIR}/include
 )
 
+# 可执行文件
 add_executable(planning_main main.cpp)
 
 target_include_directories(planning_main
@@ -22,10 +25,8 @@ PUBLIC
 ${PROJECT_SOURCE_DIR}/include
 )
 
+# 链接
 target_link_libraries(planning_main
 PUBLIC
 common
 )
-
-
-
